// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactFreshTypeScriptTransformer can handle implicit arrow returns 1`] = `
var _a, _b, _c, _d, _e;
var _f, _g, _h, _j, _k, _l;
_f = $RefreshSig$();
_g = $RefreshSig$();
_h = $RefreshSig$();
_j = $RefreshSig$();
_k = $RefreshSig$();
_l = $RefreshSig$();
export default () => (_f(), useContext(X));
export const Foo = () => (_g(), useContext(X));
_a = Foo;
module.exports = () => (_h(), useContext(X));
const Bar = () => (_j(), useContext(X));
_b = Bar;
const Baz = memo(_c = _k(() => (_k(), useContext(X)), "__TODO__", false));
_d = Baz;
const Qux = () => (_l(), (0, useContext(X)));
_e = Qux;
$RefreshReg$(_a, "Foo");
$RefreshReg$(_b, "Bar");
$RefreshReg$(_c, "Baz$memo");
$RefreshReg$(_d, "Baz");
$RefreshReg$(_e, "Qux");

`;

exports[`ReactFreshTypeScriptTransformer does not consider require-like methods to be HOCs 1`] = `
var _a;
const A = require('A');
const B = foo ? require('X') : require('Y');
const C = requireCond(gk, 'C');
const D = import('D');
export default function App() {
    return (<div>
      <A />
      <B />
      <C />
      <D />
    </div>);
}
_a = App;
$RefreshReg$(_a, "App");

`;

exports[`ReactFreshTypeScriptTransformer generates signatures for function declarations calling hooks 1`] = `
var _a;
var _b;
_b = $RefreshSig$();
export default function App() {
    _b();
    const [foo, setFoo] = useState(0);
    React.useEffect(() => { });
    return <h1>{foo}</h1>;
}
_a = App;
_b(App, "__TODO__", false);
$RefreshReg$(_a, "App");

`;

exports[`ReactFreshTypeScriptTransformer generates signatures for function expressions calling hooks 1`] = `
var _a, _b, _c, _d, _e, _f;
var _g, _h;
_g = $RefreshSig$();
_h = $RefreshSig$();
export const A = React.memo(_a = React.forwardRef(_b = _g((props, ref) => {
    _g();
    const [foo, setFoo] = useState(0);
    React.useEffect(() => { });
    return <h1 ref={ref}>{foo}</h1>;
}, "__TODO__", false)));
_c = A;
export const B = React.memo(_d = React.forwardRef(_e = _h(function (props, ref) {
    _h();
    const [foo, setFoo] = useState(0);
    React.useEffect(() => { });
    return <h1 ref={ref}>{foo}</h1>;
}, "__TODO__", false)));
_f = B;
function hoc() {
    var _a;
    _a = $RefreshSig$();
    return _a(function Inner() {
        _a();
        const [foo, setFoo] = useState(0);
        React.useEffect(() => { });
        return <h1 ref={ref}>{foo}</h1>;
    }, "__TODO__", false);
}
export let C = hoc();
$RefreshReg$(_b, "A$React.memo$React.forwardRef");
$RefreshReg$(_a, "A$React.memo");
$RefreshReg$(_c, "A");
$RefreshReg$(_e, "B$React.memo$React.forwardRef");
$RefreshReg$(_d, "B$React.memo");
$RefreshReg$(_f, "B");

`;

exports[`ReactFreshTypeScriptTransformer generates valid signature for exotic ways to call Hooks 1`] = `
var _a;
var _b;
_b = $RefreshSig$();
import FancyHook from 'fancy';
export default function App() {
    _b();
    var _a;
    _a = $RefreshSig$();
    function useFancyState() {
        _a();
        const [foo, setFoo] = React.useState(0);
        useFancyEffect();
        return foo;
    }
    _a(useFancyState, "__TODO__", false);
    const bar = useFancyState();
    const baz = FancyHook.useThing();
    React.useState();
    useThePlatform();
    return <h1>{bar}{baz}</h1>;
}
_a = App;
_b(App, "__TODO__", false);
$RefreshReg$(_a, "App");

`;

exports[`ReactFreshTypeScriptTransformer ignores HOC definitions 1`] = `
let connect = () => {
    function Comp() {
        const handleClick = () => { };
        return <h1 onClick={handleClick}>Hi</h1>;
    }
    return Comp;
};
function withRouter() {
    return function Child() {
        const handleClick = () => { };
        return <h1 onClick={handleClick}>Hi</h1>;
    };
}
;

`;

exports[`ReactFreshTypeScriptTransformer ignores complex definitions 1`] = `
var _a;
let A = foo ? () => {
    return <h1>Hi</h1>;
} : null;
const B = (function Foo() {
    return <h1>Hi</h1>;
})();
let C = () => () => {
    return <h1>Hi</h1>;
};
_a = C;
let D = bar && (() => {
    return <h1>Hi</h1>;
});
$RefreshReg$(_a, "C");

`;

exports[`ReactFreshTypeScriptTransformer ignores higher-order functions that are not HOCs 1`] = `
var _a;
const throttledAlert = throttle(_a = function () {
    alert('Hi');
});
const TooComplex = (function () { return hello; })(() => { });
if (cond) {
    const Foo = thing(() => { });
}
$RefreshReg$(_a, "throttledAlert$throttle");

`;

exports[`ReactFreshTypeScriptTransformer ignores unnamed function declarations 1`] = `
export default function () { }

`;

exports[`ReactFreshTypeScriptTransformer includes custom hooks into the signatures 1`] = `
var _a;
var _b, _c, _d;
_b = $RefreshSig$();
_c = $RefreshSig$();
_d = $RefreshSig$();
function useFancyState() {
    _b();
    const [foo, setFoo] = React.useState(0);
    useFancyEffect();
    return foo;
}
_b(useFancyState, "__TODO__", false);
const useFancyEffect = () => {
    _c();
    React.useEffect(() => { });
};
export default function App() {
    _d();
    const bar = useFancyState();
    return <h1>{bar}</h1>;
}
_a = App;
_d(App, "__TODO__", false);
$RefreshReg$(_a, "App");

`;

exports[`ReactFreshTypeScriptTransformer includes custom hooks into the signatures when commonjs target is used 1`] = `
var _a;
var _b;
_b = $RefreshSig$();
import { useFancyState } from './hooks';
export default function App() {
    _b();
    const bar = useFancyState();
    return <h1>{bar}</h1>;
}
_a = App;
_b(App, "__TODO__", false);
$RefreshReg$(_a, "App");

`;

exports[`ReactFreshTypeScriptTransformer only registers pascal case functions 1`] = `
function hello() {
    return 2 * 2;
}

`;

exports[`ReactFreshTypeScriptTransformer registers capitalized identifiers in HOC calls 1`] = `
var _a, _b, _c, _d, _e, _f, _g;
function Foo() {
    return <h1>Hi</h1>;
}
_a = Foo;
export default _c = hoc(Foo);
export const A = hoc(Foo);
_e = A;
const B = hoc(Foo);
_g = B;
$RefreshReg$(_a, "Foo");
$RefreshReg$(_c, "%default%");
$RefreshReg$(_e, "A");
$RefreshReg$(_g, "B");

`;

exports[`ReactFreshTypeScriptTransformer registers identifiers used in JSX at definition site 1`] = `
var _a, _b, _c, _d, _e, _f, _g, _h;
import A from './A';
import Store from './Store';
Store.subscribe();
const Header = styled.div \`color: red\`;
_a = Header;
const StyledFactory1 = styled('div') \`color: hotpink\`;
_b = StyledFactory1;
const StyledFactory2 = styled('div')({ color: 'hotpink' });
_c = StyledFactory2;
const StyledFactory3 = styled(A)({ color: 'hotpink' });
_d = StyledFactory3;
const FunnyFactory = funny.factory \`\`;
let Alias1 = A;
let Alias2 = A.Foo;
const Dict = {};
function Foo() {
    return (<div><A /><B /><StyledFactory1 /><StyledFactory2 /><StyledFactory3 /><Alias1 /><Alias2 /><Header /><Dict.X /></div>);
}
_e = Foo;
const B = hoc(A);
_f = B;
// This is currently registered as a false positive:
const NotAComponent = wow(A);
_h = NotAComponent;
$RefreshReg$(_a, "Header");
$RefreshReg$(_b, "StyledFactory1");
$RefreshReg$(_c, "StyledFactory2");
$RefreshReg$(_d, "StyledFactory3");
$RefreshReg$(_e, "Foo");
$RefreshReg$(_f, "B");
$RefreshReg$(_h, "NotAComponent");

`;

exports[`ReactFreshTypeScriptTransformer registers identifiers used in React.createElement at definition site 1`] = `
var _a, _b, _c, _d, _e, _f, _g, _h;
import A from './A';
import Store from './Store';
Store.subscribe();
const Header = styled.div \`color: red\`;
_a = Header;
const StyledFactory1 = styled('div') \`color: hotpink\`;
_b = StyledFactory1;
const StyledFactory2 = styled('div')({ color: 'hotpink' });
_c = StyledFactory2;
const StyledFactory3 = styled(A)({ color: 'hotpink' });
_d = StyledFactory3;
const FunnyFactory = funny.factory \`\`;
let Alias1 = A;
let Alias2 = A.Foo;
const Dict = {};
function Foo() {
    return [
        React.createElement(A),
        React.createElement(B),
        React.createElement(StyledFactory1),
        React.createElement(StyledFactory2),
        React.createElement(StyledFactory3),
        React.createElement(Alias1),
        React.createElement(Alias2),
        jsx(Header),
        React.createElement(Dict.X),
    ];
}
_e = Foo;
React.createContext(Store);
const B = hoc(A);
_f = B;
// This is currently registered as a false positive:
const NotAComponent = wow(A);
_h = NotAComponent;
$RefreshReg$(_a, "Header");
$RefreshReg$(_b, "StyledFactory1");
$RefreshReg$(_c, "StyledFactory2");
$RefreshReg$(_d, "StyledFactory3");
$RefreshReg$(_e, "Foo");
$RefreshReg$(_f, "B");
$RefreshReg$(_h, "NotAComponent");

`;

exports[`ReactFreshTypeScriptTransformer registers likely HOCs with inline functions 1`] = `
var _a, _b, _c, _d, _e, _f, _g, _h;
const A = forwardRef(_a = function () {
    return <h1>Foo</h1>;
});
_b = A;
const B = memo(_c = React.forwardRef(_d = () => {
    return <h1>Foo</h1>;
}));
_e = B;
export default _h = React.memo(_f = forwardRef(_g = (props, ref) => {
    return <h1>Foo</h1>;
}));
$RefreshReg$(_a, "A$forwardRef");
$RefreshReg$(_b, "A");
$RefreshReg$(_d, "B$memo$React.forwardRef");
$RefreshReg$(_c, "B$memo");
$RefreshReg$(_e, "B");
$RefreshReg$(_g, "%default%$React.memo$forwardRef");
$RefreshReg$(_f, "%default%$React.memo");
$RefreshReg$(_h, "%default%");

`;

exports[`ReactFreshTypeScriptTransformer registers likely HOCs with inline functions 2`] = `
var _a, _b, _c;
export default _c = React.memo(_a = forwardRef(_b = function (props, ref) {
    return <h1>Foo</h1>;
}));
$RefreshReg$(_b, "%default%$React.memo$forwardRef");
$RefreshReg$(_a, "%default%$React.memo");
$RefreshReg$(_c, "%default%");

`;

exports[`ReactFreshTypeScriptTransformer registers likely HOCs with inline functions 3`] = `
var _a, _b, _c;
export default _c = React.memo(_a = forwardRef(_b = function Named(props, ref) {
    return <h1>Foo</h1>;
}));
$RefreshReg$(_b, "%default%$React.memo$forwardRef");
$RefreshReg$(_a, "%default%$React.memo");
$RefreshReg$(_c, "%default%");

`;

exports[`ReactFreshTypeScriptTransformer registers top-level exported function declarations 1`] = `
var _a, _b, _c;
export function Hello() {
    function handleClick() { }
    return <h1 onClick={handleClick}>Hi</h1>;
}
_a = Hello;
export default function Bar() {
    return <Hello />;
}
_b = Bar;
function Baz() {
    return <h1>OK</h1>;
}
_c = Baz;
const NotAComp = 'hi';
export { Baz, NotAComp };
export function sum() { }
export const Bad = 42;
$RefreshReg$(_a, "Hello");
$RefreshReg$(_b, "Bar");
$RefreshReg$(_c, "Baz");

`;

exports[`ReactFreshTypeScriptTransformer registers top-level exported named arrow functions 1`] = `
var _a, _b;
export const Hello = () => {
    function handleClick() { }
    return <h1 onClick={handleClick}>Hi</h1>;
};
_a = Hello;
export let Bar = (props) => <Hello />;
_b = Bar;
export default () => {
    // This one should be ignored.
    // You should name your components.
    return <Hello />;
};
$RefreshReg$(_a, "Hello");
$RefreshReg$(_b, "Bar");

`;

exports[`ReactFreshTypeScriptTransformer registers top-level function declarations 1`] = `
var _a, _b;
function Hello() {
    function handleClick() { }
    return <h1 onClick={handleClick}>Hi</h1>;
}
_a = Hello;
function Bar() {
    return <Hello />;
}
_b = Bar;
$RefreshReg$(_a, "Hello");
$RefreshReg$(_b, "Bar");

`;

exports[`ReactFreshTypeScriptTransformer registers top-level variable declarations with arrow functions 1`] = `
var _a, _b, _c;
let Hello = () => {
    const handleClick = () => { };
    return <h1 onClick={handleClick}>Hi</h1>;
};
_a = Hello;
const Bar = () => {
    return <Hello />;
};
_b = Bar;
var Baz = () => <div />;
_c = Baz;
var sum = () => { };
$RefreshReg$(_a, "Hello");
$RefreshReg$(_b, "Bar");
$RefreshReg$(_c, "Baz");

`;

exports[`ReactFreshTypeScriptTransformer registers top-level variable declarations with function expressions 1`] = `
var _a, _b;
let Hello = function () {
    function handleClick() { }
    return <h1 onClick={handleClick}>Hi</h1>;
};
_a = Hello;
const Bar = function Baz() {
    return <Hello />;
};
_b = Bar;
function sum() { }
let Baz = 10;
var Qux;
$RefreshReg$(_a, "Hello");
$RefreshReg$(_b, "Bar");

`;

exports[`ReactFreshTypeScriptTransformer uses custom identifiers for $RefreshReg$ and $RefreshSig$ 1`] = `
var _a;
var _b;
_b = import.meta.refreshSig();
export default function Bar() {
    _b();
    useContext(X);
    return <Foo />;
}
_a = Bar;
_b(Bar, "__TODO__", false);
;
import.meta.refreshReg(_a, "Bar");

`;

exports[`ReactFreshTypeScriptTransformer uses original function declaration if it get reassigned 1`] = `
var _a;
function Hello() {
    return <h1>Hi</h1>;
}
_a = Hello;
Hello = connect(Hello);
$RefreshReg$(_a, "Hello");

`;
